# sycophant

./: LICENSE  README.md  meson.build  meson_options.txt
contrib/type-stubs/sycophant/: __init__.pyi
contrib/type-stubs/sycophant/proc/: __init__.pyi  maps.pyi  mem.pyi  threads.pyi
examples/: maps.py
src/: bitutils.hh  config.hh.in  elf.cc  elf.hh  fd.hh  meson.build  mmap.hh  rwlock.hh  strutils.hh  sycophant.cc  sysutils.cc  sysutils.hh  types.hh
